First POC for fixing overflow

--- a/jquery-datatreeview/Content/jquery-datatreeview.css
+++ b/jquery-datatreeview/Content/jquery-datatreeview.css
@@ -1,6 +1,10 @@
-﻿
+﻿.datatreeview-node-container {
+    display: flex;
+}
+
 .datatreeview-toggler {
     display: inline-block;
+    flex-shrink: 0;
 }
 
 .datatreeview-toggler::after {
