--- a/jquery-datatreeview/Content/jquery-datatreeview.style.css
+++ b/jquery-datatreeview/Content/jquery-datatreeview.style.css
@@ -24,17 +24,28 @@
     content: "";
     height: 1000em;
     width: 2.25em;
-    border-left: 1px solid #cccccc;
+    /*border-left: 1px solid #cccccc;*/
     border-bottom: 1px solid #cccccc;
     position: absolute;
     left: -1.625em;
     top: -999.25em;
 }
 
-/* Ensure that the connecting lines go all the way to the next node */
+/* Ensure that the connecting lines go all the way to the next node 
 .datatreeview-node > .datatreeview-list {
     padding-top: 1em;
     margin-top: -1em;
+}
+*/
+
+.datatreeview-node-container::after {
+    content: "";    
+    width: 1em;
+    height: calc(100% - 1.5em);
+    border-left: 1px solid #cccccc;
+    position: absolute;
+    left: .375em;
+    top: 0.75em;
 }
 
 .datatreeview-toggler {
@@ -44,6 +55,7 @@
     z-index: 1;
     border: 1px solid black;
     background: #ffffff;
+    margin-top: .375em;
 }
 
 .datatreeview-toggler::after {
